# missioncache

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  conftest.py  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/scripts/: snapshot_traffic.py
.github/workflows/: installer-smoke.yml  site.yml  traffic-snapshot.yml
commands/: done.md  fork.md  go.md  load.md  mode.md  new.md  prompts.md  rename.md  save.md
docs/: architecture.md  cli.md  cross-machine-sharing-plan.md  dashboard.md  forks.md  hooks.md  installation.md  mcp-tools.md  missioncache-auto.md  orbit-auto.md  statusline.md
hooks/: __init__.py  activity_tracker.py  hooks.json  pre_compact.py  session_start.py  stop.py  task_tracker.py
hooks/tests/: test_hooks.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/mcp_missioncache/: __init__.py  active_task.py  app.py  config.py  db.py  errors.py  helpers.py  iteration_log.py  models.py  orbit.py  project_files.py  server.py  tasks_parse.py  tools_active.py  tools_docs.py  tools_iteration.py  tools_planning.py  tools_tasks.py  tools_tracking.py
mcp-server/src/mcp_missioncache/templates/: context.md  tasks.md
mcp-server/src/mcp_orbit/: helpers.py  orbit.py  tools_active.py  tools_docs.py  tools_tasks.py
mcp-server/tests/: conftest.py  test_active_task.py  test_app.py  test_category.py  test_context_digest.py  test_errors.py  test_files_pure.py  test_fork_tools.py  test_helpers.py  test_iteration_log.py  test_missioncache_files.py  test_models.py  test_orbit_files.py  test_orbit_pure.py  test_rename.py  test_repo_resolution.py  test_session_binding.py  test_tasks_parse.py  test_tools_active.py  test_tools_tasks_format.py  test_update_task.py
missioncache-auto/: CLAUDE.md  README.md  pyproject.toml
missioncache-auto/missioncache_auto/: __init__.py  __main__.py  claude_runner.py  cli.py  code_reviewer.py  dag.py  db_logger.py  display.py  init_task.py  models.py  parallel.py  plan_validator.py  runnable.py  sequential.py  state.py  worker.py  worktree.py
missioncache-auto/missioncache_auto/templates/: __init__.py
missioncache-auto/tests/: conftest.py  test_claude_runner.py  test_claude_runner_env.py  test_claude_runner_signals.py  test_code_reviewer_smoke.py  test_dag.py  test_db_logger_init.py  test_models.py  test_parallel_guard.py  test_plan_validator.py  test_runnable.py  test_sequential.py  test_state.py  test_task_parser.py  test_task_paths_init.py  test_worker_commit.py  test_worktree_cleanup.py  test_worktree_templates.py
missioncache-dashboard/: CLAUDE.md  README.md  migrate_to_duckdb.py  pyproject.toml  requirements.txt
missioncache-dashboard/missioncache_dashboard/: __init__.py  cli.py  index.html  server.py  statusline.py  update_check.py
missioncache-dashboard/missioncache_dashboard/assets/: manifest.webmanifest
missioncache-dashboard/missioncache_dashboard/lib/: __init__.py  analytics_db.py  config.py  jsonl_parser.py
missioncache-dashboard/scripts/: seed_demo_data.py
missioncache-dashboard/tests/: conftest.py  test_analytics_parse.py  test_analytics_timezone.py  test_category_endpoint.py  test_category_sync.py  test_cli.py  test_complete_endpoint.py  test_config.py  test_fork_endpoints.py  test_jsonl_parser.py  test_rename_endpoint.py  test_server_init.py  test_statusline_env.py  test_statusline_fork.py  test_statusline_io.py  test_statusline_pure.py  test_statusline_saved.py  test_statusline_update.py  test_update_check.py  test_version_endpoint.py
missioncache-db/: README.md  pyproject.toml
missioncache-db/missioncache_db/: __init__.py  __main__.py  context_health.py  machine_map.py  portability.py
missioncache-db/tests/: conftest.py  test_cli_cleanup.py  test_cli_health.py  test_complete_reopen_project.py  test_context_health.py  test_delete_task.py  test_format_utils.py  test_heartbeats.py  test_legacy_guard.py  test_machine_map.py  test_migrate_context_conventions.py  test_portability.py  test_rename.py  test_task_discovery.py  test_taskdb_crud.py
missioncache-install/: README.md  hatch_build.py  pyproject.toml
missioncache-install/missioncache_install/: __init__.py  __main__.py  command_clients.py  fs_utils.py  installers.py  mcp_clients.py  prereqs.py  settings.py  state.py  ui.py  wizard.py
missioncache-install/tests/: conftest.py  test_cli.py  test_command_clients.py  test_fs_utils.py  test_installers.py  test_mcp_clients.py  test_settings.py  test_state.py  test_subprocess_utils.py  test_ui.py  test_wizard.py
orbit-auto/: CLAUDE.md
orbit-auto/orbit_auto/: db_logger.py
orbit-auto/tests/: test_db_logger_init.py  test_task_paths_init.py  test_worktree_templates.py
orbit-dashboard/: CLAUDE.md
orbit-dashboard/orbit_dashboard/: statusline.py
orbit-dashboard/tests/: test_statusline_io.py
orbit-db/: pyproject.toml
orbit-db/orbit_db/: __init__.py
orbit-install/tests/: test_installers.py
rules/: missioncache.md  orbit.md
scripts/: migrate_context_conventions.py
site/: README.md  build_site.py  changelog.template.html  docs.template.html  landing.template.html  requirements.txt
templates/: context.md  tasks.md
traffic/: clones.json  paths.json  referrers.json  views.json
user-commands/: optimize-prompt.md
