[project]
name = "missioncache-tests"
version = "0.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = [
    "mcp-server/tests",
    "missioncache-db/tests",
    "missioncache-auto/tests",
    "missioncache-dashboard/tests",
    "hooks/tests",
]
addopts = "-v --tb=short -x --import-mode=importlib"
