[project]
name = "missioncache-db"
version = "1.0.3"
description = "SQLite-based task and time tracking database for the MissionCache Claude Code plugin"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Tomer Brami", email = "tomerbrami@gmail.com"}
]
keywords = ["claude-code", "missioncache", "task-tracking", "time-tracking", "sqlite"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/missioncache/missioncache"
Repository = "https://github.com/missioncache/missioncache"
Issues = "https://github.com/missioncache/missioncache/issues"

[project.scripts]
missioncache-db = "missioncache_db:main"
mc-db = "missioncache_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["missioncache_db"]
