[project]
name = "missioncache-install"
version = "1.0.2"
description = "Bootstrap installer for MissionCache - the project manager for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Tomer Brami", email = "tomerbrami@gmail.com"},
]
license = "MIT"
keywords = ["claude", "missioncache", "installer", "bootstrap", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
]

# Runtime deps kept minimal to preserve `uvx missioncache-install` cold-start UX.
# rich powers the install wizard's panels, tables, prompts, and styled output;
# its own deps (markdown-it-py, mdurl, pygments) are pure-Python and small.
# pyfiglet provides the gradient MISSIONCACHE banner.
# json5 is a pure-Python JSONC parser, lazy-imported only when strict json.loads
# fails so the happy path stays on stdlib. Required because OpenCode and VSCode
# both accept JSONC (comments + trailing commas) in their config files; without
# it, MCP registration silently skips users with documented-format configs.
# First-run cost on cold uvx cache: ~1-3s for rich + pyfiglet, ~0.1s for json5.
dependencies = [
    "rich>=13.7.0",
    "pyfiglet>=1.0.0",
    "json5>=0.9.0",
]

[project.scripts]
missioncache-install = "missioncache_install.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/missioncache/missioncache"
Repository = "https://github.com/missioncache/missioncache"
Issues = "https://github.com/missioncache/missioncache/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["missioncache_install"]

# Bundle the repo's rules/, user-commands/, and commands/ into the wheel so end
# users can install them without cloning. Source of truth stays in the repo root;
# hatchling pulls them in at build time. Maintainers using --local skip the bundle
# and read from the clone directly.
#
# `commands/` powers slash command parity in Codex/OpenCode/VSCode (via
# command_clients.py - one source, three rendered destinations). Claude reads the
# same files via its plugin manifest, not the bundle.
[tool.hatch.build.targets.wheel.force-include]
"../rules" = "missioncache_install/bundled/rules"
"../user-commands" = "missioncache_install/bundled/user_commands"
"../commands" = "missioncache_install/bundled/commands"

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "__pycache__/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
